* Patch by Andreas: we did not store ebp in vregs::ebp, and we did not store   ebx at all. * This fixes bug #2569.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@26818 a95241bf-73f2-0310-859d-f6bbb57e9c96